fix overflow

--- a/src/presenters/Post/Image/image.css
+++ b/src/presenters/Post/Image/image.css
@@ -22,7 +22,7 @@
   bottom: 0;
   right: 0;
   padding: 4px;
-  margin: 0;
+  margin: 0 4px;
   white-space: nowrap;
   overflow: hidden;
   color: var(--color-caption);
